welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:4: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^