welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
  def marqueSol() {
    baisseBrosse()
    gauche(2)
    leveBrosse() 
  }
  
  def faireV() {
    
  }
  marqueSol()
}